<resources>
    <string name="app_name">OCTrace</string>

    <!--Errors-->
    <string name="bluetooth_turn_off">Bluetooth is powered off</string>
    <string name="bluetooth_turn_off_description">Please turn on Bluetooth to enable automatic anonymous exposure tracing!</string>
    <string name="bluetooth_do_not_support">Your smartphone does not support Bluetooth</string>
    <string name="bluetooth_do_not_support_description">Therefore, we will not be able to connect the device</string>
    <string name="battery_turn_off">Battery optimization is on</string>
    <string name="battery_turn_off_description">Please turn off battery optimization to enable Dp3t library!</string>
    <string name="turn_off">Turn off</string>

    <!--Other-->
    <string name="enable">Enable</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="please_confirm">Please confirm</string>
    <string name="make_choice">Make a choice</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="logs">Logs</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="turning_bluetooth_off">Turning Bluetooth off…</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="turning_bluetooth_on">Turning Bluetooth on…</string>
    <string name="bluetooth_unknown_state">Bluetooth unknown state</string>
    <string name="exposed_contact_message">A contact you have recorded has reported exposure.</string>
    <string name="contact_at_date">Contact %s</string>

    <!-- MainActivity -->
    <string name="title_newsroom">Newsroom</string>
    <string name="title_map">Map</string>
    <string name="title_my_status">My status</string>
    <string name="location_disabled">Location is disabled :(</string>

    <!-- MapFragment -->
    <string name="record_contact">Record contact</string>
    <string name="contact_added">Contact has been added to your contact history.</string>
    <string name="recorded_contact">The contact has been recorded!</string>
    <string name="accuracy_text">Location accuracy: %d meters</string>

    <!-- QrCodeFragment -->
    <string name="qr_info">Please have the other person scan this QR code.</string>
    <string name="failed_get_token">Failed to get notifications token.</string>
    <string name="failed_generate_qr">Failed to generate QR.</string>
    <string name="code_has_expired">Contact code has expired, please try again.</string>

    <!-- LogsFragment -->
    <string name="clear_logs">Are you sure you want to clear all logs?</string>

    <!-- StatusFragment -->
    <string name="settings">Settings:</string>
    <string name="record_track">Record track</string>
    <string name="share_track">Share my track</string>
    <string name="share_meta">Share contacts time &amp; location</string>
    <string name="current_status">Current status: %s</string>
    <string name="i_got_symptoms">I got exposed :(</string>
    <string name="status_normal">Normal</string>
    <string name="status_symptoms">Exposed</string>
    <string name="whats_next">What\'s next?</string>
    <string name="whats_next_info">What happens next? Users that have been in contact with you are notified that they have been in close contact with a user that has reported exposure. If you previously agreed to share your anonymous location log, those users will know when and where it happened, and can take preventive measures.</string>
    <string name="report_exposure_confirmation">You are about to anonymously self-report exposure.\nNOTE: This procedure is anonymous, your privacy is kept at all times.</string>
    <string name="tracks_upload_confirmation">Do you want to share your anonymous tracking records? This information will be consolidated with other users’ data and mark the most exposed areas.\nNOTE: Data about tracking records is anonymous, your privacy is kept at all times.</string>
    <string name="share_meta_data_confirmation">Do you want to share your anonymous contact location and time? This will provide users that have been in contact with you the time and place of contact so they can take preventive measures. For example: If a user sat in a cafe on the table next to yous, he or she will know to have been in contact with an exposed user in that cafe.\nNOTE: Data about contact locations and time is anonymous, your privacy is kept at all times.</string>

    <!-- OnboardingActivity -->
    <string name="onboarding_welcome_title">Welcome!</string>
    <string name="onboarding_welcome_text">OpenCovidTrace is here to help you and your community to keep safe and take the appropriate measures in case necessary.\n\nThank you for using this app, we are in this together, and each one of us plays an important role.</string>
    <string name="onboarding_welcome_button">Get started!</string>
    <string name="onboarding_location_title">Location Data</string>
    <string name="onboarding_location_text">Location data (not your exact location but rather a relevant area) is needed in order to make sure only relevant exposure data is downloaded to your app from the server in case needed.\n\nYou can optionally track your movement on the map, and it will show areas to avoid due to virus exposure.\n\nIn case you report exposed, you can share your anonymous location data. This means that users that have been in contact with you at any point in time will know the relevant time and place of contact, and can take precautions accordingly.</string>
    <string name="onboarding_location_button">Enable location</string>

    <!-- TrackingService -->
    <string name="background_channel_name">Background mode</string>
    <string name="tracking_active">Tracking is active</string>

    <!-- MessagingService -->
    <string name="updates_channel_name">Updates</string>
</resources>
